force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/ASF_Bulk_Row_to_Record_Converter_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bulk Row to Record Converter Config</label>
    <pluralLabel>Bulk Row to Record Converter Configs</pluralLabel>
</CustomObject>