force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/CTST_Query_Fields__c.field-meta.xml
<CustomField>
<<<<<<<< HEAD:force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Checker_Manager__c.field-meta.xml
    <fullName>Checker_Manager__c</fullName>
    <label>Checker Manager</label>
========
    <fullName>CTST_Query_Fields__c</fullName>
    <label>CTST Query Fields</label>
>>>>>>>> SIT:force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/CTST_Query_Fields__c.field-meta.xml
    <length>255</length>
    <type>Text</type>
</CustomField>