force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/Custom_Permission_for_Access__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission_for_Access__c</fullName>
    <label>Custom Permission for Access</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>