force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>