force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <inlineHelpText>Field Api Name which needs to be returned as a unique key after successful bulk create operation</inlineHelpText>
    <label>FieldApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>