force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/Fields_Name__c.field-meta.xml
<CustomField>
    <fullName>Fields_Name__c</fullName>
    <description>Contains fields that can be uploaded in CSV comma (,) separated</description>
    <label>Fields Name</label>
    <type>TextArea</type>
</CustomField>