force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/Max_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size__c</fullName>
    <inlineHelpText>Maximum Size of the file that can be uploaded</inlineHelpText>
    <label>Max File Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>