force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/Run_Assignment_Rule_on_Create__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Recategorization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <defaultValue>false</defaultValue>
    <description>This field is used for report purpose for business.</description>
    <label>Run Assignment Rule on Create?</label>
    <type>Checkbox</type>
</CustomField>