force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>