force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/fields/SOQL_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Where_Clause__c</fullName>
    <description>denotes the filter criteria that needs to be included</description>
    <inlineHelpText>denotes the filter criteria that needs to be included</inlineHelpText>
    <label>SOQL Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>