force-app/main/default/objects/ASF_Bulk_Row_to_Record_Converter_Config__mdt/listViews/All_Metadata.listView-meta.xml
<ListView>
    <fullName>All_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Template_Name__c</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Display_Label__c</columns>
    <columns>Fields_Name__c</columns>
    <columns>Order__c</columns>
    <columns>SObject_Name__c</columns>
    <columns>SOQL_Where_Clause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadata</label>
</ListView>